@@ -173,6 +173,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5386: mmap.write_byte didn't check map size, so it could cause buffer
+  overrun.
+
 - Issue #1533164: Installed but not listed *.pyo was breaking Distutils
   bdist_rpm command.
 
